--- a/Etape 2/Calculatrice.html
+++ b/Etape 2/Calculatrice.html
@@ -39,7 +39,7 @@
     <!-- Bouton égale de la calculatrice suivit du bouton effacer -->
 
     <button onclick="calculatrice_1.equal()" class="button">=</button>
-    <button onclick="calculatrice_1.operator_clear()" class="button">C</button>
+    <button onclick="calculatrice_1.operator_clear()" class="button">B</button>
 
 
     <!-- Affiche le résultat -->
